--- a/train_ground_pressure_est_model_rf.ipynb
+++ b/train_ground_pressure_est_model_rf.ipynb
@@ -5,28 +5,26 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-08-22T08:12:03.215403Z",
-     "start_time": "2024-08-22T08:12:02.272275Z"
+     "end_time": "2024-08-23T06:17:51.138380Z",
+     "start_time": "2024-08-23T06:17:51.125339Z"
     }
    },
    "source": [
     "import os, joblib\n",
     "from utils.dataset import Dataset\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.metrics import r2_score\n",
     "from skl2onnx import convert_sklearn\n",
     "from skl2onnx.common.data_types import FloatTensorType\n"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-22T08:12:03.245493Z",
-     "start_time": "2024-08-22T08:12:03.224406Z"
+     "end_time": "2024-08-23T06:17:52.531150Z",
+     "start_time": "2024-08-23T06:17:52.520077Z"
     }
    },
    "cell_type": "code",
@@ -56,18 +54,18 @@
        " 'unsafe-swing-90-load-90-.csv']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-22T08:12:03.829940Z",
-     "start_time": "2024-08-22T08:12:03.308104Z"
+     "end_time": "2024-08-23T06:17:55.904886Z",
+     "start_time": "2024-08-23T06:17:55.336252Z"
     }
    },
    "cell_type": "code",
@@ -81,35 +79,20 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "8b92a037a07b4827b46bfd8b83b1e005"
+       "model_id": "1c610fdf8e2647f39c4175f4147bc5d2"
       }
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "execution_count": 3
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-22T08:12:03.861062Z",
-     "start_time": "2024-08-22T08:12:03.847024Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "model_feature_names = ['f10', 'f11', 'f12']\n",
-    "model_target_names = ['f20', 'f21', 'f22', 'f23', 'f24', 'f25', 'f26', 'f27', 'f28', 'f29']"
-   ],
-   "outputs": [],
-   "execution_count": 4
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-22T08:12:03.906503Z",
-     "start_time": "2024-08-22T08:12:03.878097Z"
+     "end_time": "2024-08-23T06:11:29.711068Z",
+     "start_time": "2024-08-23T06:11:29.686895Z"
     }
    },
    "cell_type": "code",
@@ -417,18 +400,18 @@
        "</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-22T08:12:04.044742Z",
-     "start_time": "2024-08-22T08:12:04.029585Z"
+     "end_time": "2024-08-23T06:11:29.833561Z",
+     "start_time": "2024-08-23T06:11:29.819817Z"
     }
    },
    "cell_type": "code",
@@ -462,13 +445,13 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-22T08:14:07.202986Z",
-     "start_time": "2024-08-22T08:14:07.147419Z"
+     "end_time": "2024-08-23T06:11:30.031827Z",
+     "start_time": "2024-08-23T06:11:29.978497Z"
     }
    },
    "cell_type": "code",
@@ -688,18 +671,18 @@
        "</div>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-22T08:14:12.617251Z",
-     "start_time": "2024-08-22T08:14:12.576282Z"
+     "end_time": "2024-08-23T06:11:30.185955Z",
+     "start_time": "2024-08-23T06:11:30.147576Z"
     }
    },
    "cell_type": "code",
@@ -919,39 +902,25 @@
        "</div>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 15
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-22T08:12:43.820882Z",
-     "start_time": "2024-08-22T08:12:43.807350Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "train_data_for_model = train_data.rename(columns=dict(zip(dataset_inst.get_data_feature_names()+dataset_inst.get_data_target_names(), model_feature_names+model_target_names)))\n",
-    "val_data_for_model = val_data.rename(columns=dict(zip(dataset_inst.get_data_feature_names()+dataset_inst.get_data_target_names(), model_feature_names+model_target_names)))"
-   ],
-   "outputs": [],
-   "execution_count": 9
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-22T08:13:03.860038Z",
-     "start_time": "2024-08-22T08:13:03.613701Z"
+     "end_time": "2024-08-23T06:11:49.469887Z",
+     "start_time": "2024-08-23T06:11:49.185398Z"
     }
    },
    "cell_type": "code",
    "source": [
     "model = RandomForestRegressor(n_estimators=10, random_state=0, n_jobs=os.cpu_count())\n",
-    "model.fit(train_data_for_model[model_feature_names], train_data_for_model[model_target_names])#%%\n"
+    "model.fit(dataset_inst.get_train_dataset_for_model()[dataset_inst.get_model_feature_names()], \n",
+    "          dataset_inst.get_train_dataset_for_model()[dataset_inst.get_model_target_names()])"
    ],
    "outputs": [
     {
@@ -963,23 +932,23 @@
        "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestRegressor(n_estimators=10, n_jobs=48, random_state=0)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestRegressor</label><div class=\"sk-toggleable__content\"><pre>RandomForestRegressor(n_estimators=10, n_jobs=48, random_state=0)</pre></div></div></div></div></div>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-22T08:13:08.784084Z",
-     "start_time": "2024-08-22T08:13:08.738506Z"
+     "end_time": "2024-08-23T06:12:54.543442Z",
+     "start_time": "2024-08-23T06:12:54.501744Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "pred_out = model.predict(val_data_for_model[model_feature_names])\n",
+    "pred_out = model.predict(dataset_inst.get_val_dataset_for_model()[dataset_inst.get_model_feature_names()])\n",
     "pred_target_names = ['Pred_Load_Left_1(N)', 'Pred_Load_Left_2(N)', 'Pred_Load_Left_3(N)', 'Pred_Load_Left_4(N)', 'Pred_Load_Left_5(N)',\n",
     "                     'Pred_Load_Right_1(N)', 'Pred_Load_Right_2(N)', 'Pred_Load_Right_3(N)', 'Pred_Load_Right_4(N)', 'Pred_Load_Right_5(N)']\n",
     "\n",
@@ -991,8 +960,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-22T08:13:42.679093Z",
-     "start_time": "2024-08-22T08:13:42.560885Z"
+     "end_time": "2024-08-23T06:17:33.748118Z",
+     "start_time": "2024-08-23T06:17:33.628445Z"
     }
    },
    "cell_type": "code",
@@ -1087,14 +1056,14 @@
        "max                    25.158362                  14.812926   \n",
        "\n",
        "       Relative_Error_Right_4(%)  Relative_Error_Right_5(%)  \n",
-       "count               1.217500e+04               12175.000000  \n",
-       "mean                5.692903e-01                   1.011804  \n",
-       "std                 1.309648e+00                   2.422191  \n",
-       "min                 1.174761e-14                   0.000005  \n",
-       "25%                 1.334232e-02                   0.022736  \n",
-       "50%                 4.909729e-02                   0.096671  \n",
-       "75%                 3.901718e-01                   0.685086  \n",
-       "max                 1.767975e+01                  37.215117  \n",
+       "count               12175.000000               12175.000000  \n",
+       "mean                    0.569290                   1.011804  \n",
+       "std                     1.309648                   2.422191  \n",
+       "min                     0.000000                   0.000005  \n",
+       "25%                     0.013342                   0.022736  \n",
+       "50%                     0.049097                   0.096671  \n",
+       "75%                     0.390172                   0.685086  \n",
+       "max                    17.679746                  37.215117  \n",
        "\n",
        "[8 rows x 43 columns]"
       ],
@@ -1162,7 +1131,7 @@
        "      <td>12175.000000</td>\n",
        "      <td>12175.000000</td>\n",
        "      <td>12175.000000</td>\n",
-       "      <td>1.217500e+04</td>\n",
+       "      <td>12175.000000</td>\n",
        "      <td>12175.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1186,7 +1155,7 @@
        "      <td>0.651381</td>\n",
        "      <td>0.474835</td>\n",
        "      <td>0.402675</td>\n",
-       "      <td>5.692903e-01</td>\n",
+       "      <td>0.569290</td>\n",
        "      <td>1.011804</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1210,7 +1179,7 @@
        "      <td>1.486570</td>\n",
        "      <td>1.018494</td>\n",
        "      <td>0.906481</td>\n",
-       "      <td>1.309648e+00</td>\n",
+       "      <td>1.309648</td>\n",
        "      <td>2.422191</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1234,7 +1203,7 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>1.174761e-14</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000005</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1258,7 +1227,7 @@
        "      <td>0.019616</td>\n",
        "      <td>0.012074</td>\n",
        "      <td>0.006672</td>\n",
-       "      <td>1.334232e-02</td>\n",
+       "      <td>0.013342</td>\n",
        "      <td>0.022736</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1282,7 +1251,7 @@
        "      <td>0.071244</td>\n",
        "      <td>0.041213</td>\n",
        "      <td>0.022263</td>\n",
-       "      <td>4.909729e-02</td>\n",
+       "      <td>0.049097</td>\n",
        "      <td>0.096671</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1306,7 +1275,7 @@
        "      <td>0.542405</td>\n",
        "      <td>0.409478</td>\n",
        "      <td>0.269952</td>\n",
-       "      <td>3.901718e-01</td>\n",
+       "      <td>0.390172</td>\n",
        "      <td>0.685086</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1330,7 +1299,7 @@
        "      <td>49.327595</td>\n",
        "      <td>25.158362</td>\n",
        "      <td>14.812926</td>\n",
-       "      <td>1.767975e+01</td>\n",
+       "      <td>17.679746</td>\n",
        "      <td>37.215117</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1339,12 +1308,12 @@
        "</div>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 12
   },
   {
    "metadata": {
