--- a/train_ground_pressure_est_model_rf.ipynb
+++ b/train_ground_pressure_est_model_rf.ipynb
@@ -11,7 +11,7 @@
    },
    "source": [
     "import os, joblib\n",
-    "from utils.dataset import Dataset\n",
+    "from utils.crane_dataset import CraneDataset\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "import pandas as pd\n",
     "from skl2onnx import convert_sklearn\n",
@@ -69,7 +69,7 @@
     }
    },
    "cell_type": "code",
-   "source": "dataset_inst = Dataset(file_path_list=data_file_name_list)",
+   "source": "dataset_inst = CraneDataset(file_path_list=data_file_name_list)",
    "outputs": [
     {
      "data": {
