fix create model

--- a/converte_onnx.ipynb
+++ b/converte_onnx.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-11-01T15:27:46.700807Z",
-     "start_time": "2024-11-01T15:27:40.498855Z"
+     "end_time": "2024-11-04T04:25:36.246483Z",
+     "start_time": "2024-11-04T04:25:32.824995Z"
     }
    },
    "source": [
@@ -23,8 +23,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-01T15:28:04.318913Z",
-     "start_time": "2024-11-01T15:27:47.761892Z"
+     "end_time": "2024-11-04T04:25:38.366486Z",
+     "start_time": "2024-11-04T04:25:36.251486Z"
     }
    },
    "cell_type": "code",
@@ -32,63 +32,31 @@
     "pred_distance = 10\n",
     "best_model_set = list()\n",
     "\n",
-    "for i in tqdm(range(10), desc='Loading best models'):\n",
-    "    best_model_set.append(keras.models.load_model(os.path.join('models', f'lstm_model_{i}_{pred_distance}.keras')))"
+    "best_model = keras.models.load_model(os.path.join('models', f'lstm_model_{pred_distance}.keras'))"
    ],
    "id": "7f6610afc428f4bf",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Loading best models:   0%|          | 0/10 [00:00<?, ?it/s]"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "b73c484db73b4c00a8c4ad3aebb9f9b9"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-01T15:29:17.634774Z",
-     "start_time": "2024-11-01T15:28:44.796169Z"
+     "end_time": "2024-11-04T04:26:01.089839Z",
+     "start_time": "2024-11-04T04:25:58.874588Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "spec = (tf.TensorSpec(best_model_set[0].inputs[0].shape, tf.float32, name='input'), )\n",
+    "spec = (tf.TensorSpec(best_model.inputs[0].shape, tf.float32, name='input'), )\n",
     "\n",
-    "for i, best_model in enumerate(tqdm(best_model_set, desc='convert keras to onnx')):\n",
-    "    onnx_model, _ = tf2onnx.convert.from_keras(best_model, input_signature=spec)\n",
+    "onnx_model, _ = tf2onnx.convert.from_keras(best_model, input_signature=spec)\n",
     "    \n",
-    "    with open(os.path.join('models', f'onnx_model_{i}_{pred_distance}.onnx'), \"wb\") as f:\n",
-    "        f.write(onnx_model.SerializeToString())"
+    "with open(os.path.join('models', f'onnx_model_{pred_distance}.onnx'), \"wb\") as f:\n",
+    "    f.write(onnx_model.SerializeToString())"
    ],
    "id": "8416b0bfb546f854",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "convert keras to onnx:   0%|          | 0/10 [00:00<?, ?it/s]"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "b3d7074ca0d04520b407e5c80fab3fc0"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "execution_count": 3
+   "outputs": [],
+   "execution_count": 5
   }
  ],
  "metadata": {
