--- a/analysis_data.ipynb
+++ b/analysis_data.ipynb
@@ -18,7 +18,7 @@
     "import pandas as pd\n",
     "\n",
     "from matplotlib.ticker import MultipleLocator, LogLocator\n",
-    "from utils.Dataset import CraneDataset\n",
+    "from src.dataset import CraneDataset\n",
     "from tqdm.notebook import tqdm\n"
    ],
    "outputs": [],
