--- a/analysis_rollover_detection_model.ipynb
+++ b/analysis_rollover_detection_model.ipynb
@@ -18,9 +18,9 @@
     "import matplotlib.ticker as ticker\n",
     "\n",
     "from tensorflow import keras\n",
-    "from utils.layer import DecompositionLayer, FeatureWiseScalingLayer\n",
-    "from utils.detect_roll_over import calculate_load_margin_v2\n",
-    "from utils.miscellaneous import create_seq_dataset_multiple_input_single_output, get_dataset\n",
+    "from src.models.layer import DecompositionLayer, FeatureWiseScalingLayer\n",
+    "from src.detect_roll_over import calculate_load_margin_v2\n",
+    "from src.miscellaneous import create_seq_dataset_multiple_input_single_output, get_dataset\n",
     "from sklearn.metrics import precision_score, recall_score, f1_score, confusion_matrix, roc_curve, roc_auc_score"
    ],
    "outputs": [],
