--- a/analysis_rollover_detection_onnx_model.ipynb
+++ b/analysis_rollover_detection_onnx_model.ipynb
@@ -18,9 +18,9 @@
     "import onnxruntime as ort\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "from utils.Dataset import CraneDataset\n",
-    "from utils.miscellaneous import create_seq_dataset_multiple_input_single_output\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, roc_curve, roc_auc_score\n",
+    "from src.dataset import CraneDataset\n",
+    "from src.miscellaneous import create_seq_dataset_multiple_input_single_output\n",
+    "from sklearn.metrics import precision_score, recall_score, f1_score, confusion_matrix, roc_curve, roc_auc_score\n",
     "from tqdm.notebook import tqdm"
    ],
    "outputs": [],
