--- a/create_rollover_detection.ipynb
+++ b/create_rollover_detection.ipynb
@@ -19,9 +19,10 @@
     "import matplotlib.ticker as ticker\n",
     "\n",
     "from tensorflow import keras\n",
-    "from utils.assemble_model import build_detection_model\n",
-    "from utils.detect_roll_over import calculate_load_margin_v2\n",
-    "from utils.miscellaneous import create_seq_dataset_multiple_input_single_output, get_dataset"
+    "from src.dataset import get_dataset\n",
+    "from src.models.assemble_model import build_detection_model\n",
+    "from src.detect_roll_over import calculate_load_margin_v2\n",
+    "from src.miscellaneous import create_seq_dataset_multiple_input_single_output"
    ],
    "outputs": [
     {
